@@ -14,7 +14,7 @@
 	<statistics>0</statistics>
 	<seo_enabled>1</seo_enabled>
 	<server_folder>toendacms_svn/toendacms</server_folder>
-	<seo_format>2</seo_format>
+	<seo_format>3</seo_format>
 	<seo_news_title>1</seo_news_title>
 	<seo_content_title>1</seo_content_title>
 	<site_offline>0</site_offline>
