@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 4560</build>
+	<build>Build 4570</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>27.02.2008 - 01:11</release_date>
+	<release_date>28.02.2008 - 12:56</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
